# pytasks-api-rest

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API.postman_collection.json  DECISION_LOG.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest-mocked.ini  pytest.ini  setup_test_db.py
app/: config.py  main.py
app/api/: dependencies.py  error_handlers.py
app/api/routes/: __init__.py  health.py  task_lists.py  tasks.py  users.py
app/api/schemas/: __init__.py  common_schemas.py  task_list_schemas.py  task_schemas.py  user_schemas.py
app/application/services/: __init__.py  task_list_validation_service.py  task_validation_service.py  user_validation_service.py
app/application/use_cases/: __init__.py  activate_user.py  create_task.py  create_task_list.py  create_user.py  deactivate_user.py  delete_task.py  delete_task_list.py  delete_user.py  get_task.py  get_task_list.py  get_tasks.py  get_user.py  get_users.py  update_task.py  update_task_assignment.py  update_task_list.py  update_task_priority.py  update_task_status.py  (+1 more)
app/domain/: __init__.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  cde2f8866870_make_owner_id_nullable_in_tasklist.py
scripts/: run_tests.py  setup_test_db.py  test_runner.py
tests/: conftest.py
tests/api/: conftest.py  test_task_lists_endpoints.py  test_tasks_endpoints.py  test_users_endpoints.py  test_users_endpoints_mocked.py
tests/factories/: test_data_factory.py
tests/fixtures/: domain_fixtures.py
tests/integration/: test_api_integration.py  test_database_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: conftest.py  test_task_list_use_cases.py  test_task_model.py  test_task_repository.py  test_task_use_cases.py  test_user_domain_service.py  test_user_repository.py  test_user_use_cases.py
(+45 files in other folders)
