[project]
name = "pytasks-api-rest"
version = "0.1.0"
description = ""
authors = [
    {name = "Oscar Pereda",email = "olavidps@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.2.1,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "asyncpg (>=0.30.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
pytest-watch = "^4.2.0"
pre-commit = "^4.2.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
flake8-docstrings = "^1.7.0"
autoflake = "^2.2.1"
pytest-env = "^1.1.5"
trio = "^0.30.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
skip = [".venv", "build", "dist", "__pycache__"]
known_first_party = ["app", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "app"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
fail_under = 75
